fix image layout break at mobile sizes

--- a/css/loveinactionuganda.css
+++ b/css/loveinactionuganda.css
@@ -27,7 +27,7 @@ a:hover, a:focus {
 }*/
 
 #container {
-  margin: 0 auto;
+  margin: 60px auto;
   max-width: 900px;
   min-height: 1vh;
 }
@@ -57,6 +57,10 @@ a:hover, a:focus {
   text-decoration: underline;
 }
 
+.l-box {
+  padding: 20px 40px;
+}
+
 section {
   background-color: #781800;
   color: #eee;
@@ -66,18 +70,5 @@ section.even {
   color: #333;
 }
 section h2 {
-  margin: 30px 40px 0 40px;
   font-weight: normal;
-}
-section h3 {
-  margin: 30px 40px 0 40px;
-}
-section p {
-  margin: 20px 40px 0 40px;
-}
-section p:last-child, section img:last-child {
-  margin-bottom: 30px;
-}
-section img {
-  padding: 20px 40px 0 40px;
 }
